--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <i class="mdi mdi-thought-bubble"></i>
             <div>Scare</div>
           </div>
-          <div class="btn btn-primary" onclick="getDrunk()">
+          <div class="btn btn-primary" onclick="wine()">
             <div id="wine-price"> 100 </div>
             <i class="mdi mdi-thought-bubble"></i> Wine
           </div>
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-12"></div>
+      <div class="col-12"> </div>
     </div>
     </div>
   </main>
