--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@
   <header>
     <div class="container">
       <div class="row">
-        <div class="col-12"></div>
+        <div class="col-6"></div>
+        <div id="alert" class=" alert col-6"></div>
       </div>
     </div>
   </header>
   <main>
-    <div class="container-fluid">
+    <div class="container-fluid ">
       <div class="row">
         <div class="col-4">
           <div id="tracker" class="tracker">
           </div>
         </div>
-        <div class="col-4 Rick m-1">
+        <div class="col-4 Rick m-1 ship">
           <img src="https://i.gifer.com/origin/bd/bd230cde4a6f31d2a9556b3ce3451b2c.gif" onclick="think()" alt="main">
         </div>
-        <div class="col-4 buttons">
+        <div class="col-4 buttons my-5">
           <div class="btn btn-primary" onclick="beer()">
             <div id="beer-price"> 25 </div>
             <i class="mdi mdi-thought-bubble"></i> Beer
@@ -58,12 +59,15 @@
     </div>
   </main>
   <footer>
-    <div class="container-fluid">
+    <div class="container-fluid ">
       <div class="row">
         <div class="col-12"></div>
       </div>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
   <script src="main.js"></script>
 </body>
 
